welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:37: error: value Green is not a member of object java.awt.Color
    c=Color.Green
            ^